fixed background problem of screen getting dark with unreadable text when using darkmode

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -22,15 +22,15 @@ a {
   
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-}
+// @media (prefers-color-scheme: dark) {
+//   html {
+//     color-scheme: dark;
+//   }
+//   body {
+//     color: white;
+//     background: black;
+//   }
+// }
 
 // 1 buttons
 .bg-primary {
